# superflame

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  how_const_string.cc  how_fixed_string.cc  how_ignore_unused.cc  how_raii_helper.cc  how_static_initializer.cc
include/superflame/: api_export.h  attribute.h  attribute_manager.h  const_string.h  fixed_string.h  ignore_unused.h  new_pointer_scoped_holder.h  raii_helper.h  static_initializer.h  traits.h
test/: CMakeLists.txt  test_attribute.cc  test_attribute_group.cc  test_attribute_manager.cc  test_new_pointer_scoped_holder.cc
